--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,8 +38,9 @@
     "verbatimModuleSyntax": true,
     "isolatedModules": true,
     "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
     "skipLibCheck": true,
+    "noEmit": true,
     "allowImportingTsExtensions": true,
+    "moduleDetection": "force"
   }
 }
